--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,33 @@
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <targetPath>${project.build.directory}</targetPath>-->
+<!--                <includes>-->
+<!--                    <include>log4j.properties</include>-->
+<!--                </includes>-->
+<!--            </resource>-->
+<!--        </resources>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-jar-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; exclude log4j.properties &ndash;&gt;-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/log4j.properties</exclude>-->
+<!--                    </excludes>-->
+<!--                    <archive>-->
+<!--                        <manifest>-->
+<!--                            <addClasspath>true</addClasspath>-->
+<!--                            <mainClass>com.mkyong.core.utils.testing</mainClass>-->
+<!--                            <classpathPrefix>dependency-jars/</classpathPrefix>-->
+<!--                        </manifest>-->
+<!--                    </archive>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
